# project_creator

./: CMakeLists.txt  README.md
include/: cmakelists.h  cmakelists_library.h
src/: library_creator.cpp  main.cpp  project_creator.cpp
